--- a/NEC_data_cleaning.ipynb
+++ b/NEC_data_cleaning.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMx9qN3KfTVjp2sL6+VU0I+",
+      "authorship_tag": "ABX9TyP5/RD4esIvSxLFpX1B7a+3",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -37,13 +37,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 108,
+      "execution_count": 143,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "4d2va8Sp-3Z3",
-        "outputId": "b42c842c-79d9-4a4e-a411-e3577784d346"
+        "outputId": "95812913-27db-4ccd-96ea-4e3739e39bf8"
       },
       "outputs": [
         {
@@ -86,7 +86,7 @@
       "metadata": {
         "id": "yb7N0MYp-a8P"
       },
-      "execution_count": 109,
+      "execution_count": 144,
       "outputs": []
     },
     {
@@ -111,12 +111,12 @@
       ],
       "metadata": {
         "id": "9MFM6R7IAWQ1",
-        "outputId": "54b9b771-d17d-4f68-efa1-9b59e708680a",
+        "outputId": "3e25cea0-2449-4f64-bd77-331e24a1cc21",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 110,
+      "execution_count": 145,
       "outputs": [
         {
           "output_type": "stream",
@@ -152,7 +152,7 @@
       "metadata": {
         "id": "Tv6iMA-h-dzN"
       },
-      "execution_count": 111,
+      "execution_count": 146,
       "outputs": []
     },
     {
@@ -177,12 +177,12 @@
       ],
       "metadata": {
         "id": "pFqF4As7AIfA",
-        "outputId": "577dd14d-1f82-41b0-acf7-08bf3682d816",
+        "outputId": "40949635-792a-4e12-c1c5-99d76beaffc5",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 112,
+      "execution_count": 147,
       "outputs": [
         {
           "output_type": "stream",
@@ -214,12 +214,12 @@
       ],
       "metadata": {
         "id": "V_tb7hE1CMox",
-        "outputId": "812b96cd-e15f-49e9-9d8e-50b460bceffe",
+        "outputId": "8de7b7c0-e182-4a0f-a5c6-d08a523ea06c",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 113,
+      "execution_count": 148,
       "outputs": [
         {
           "output_type": "stream",
@@ -302,12 +302,12 @@
       ],
       "metadata": {
         "id": "EyOhZspYCnxg",
-        "outputId": "578d285d-21fc-4bff-daa3-eeec3e9a7d97",
+        "outputId": "79aa8402-59db-4d54-cfb2-ca47f7f87298",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 114,
+      "execution_count": 149,
       "outputs": [
         {
           "output_type": "stream",
@@ -342,9 +342,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "ez24zJwZgaaP",
-        "outputId": "5a105365-d2f0-4c0c-ecc4-d7819f33f124"
+        "outputId": "3a45fecd-fe4b-4417-a180-697126dc3331"
       },
-      "execution_count": 115,
+      "execution_count": 150,
       "outputs": [
         {
           "output_type": "stream",
@@ -382,9 +382,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "RBy34o8zyrO9",
-        "outputId": "956233fe-c663-4e55-e7ba-473b9e3489d3"
+        "outputId": "30395f6a-44a8-489b-f481-1dd0999f8c84"
       },
-      "execution_count": 116,
+      "execution_count": 151,
       "outputs": [
         {
           "output_type": "stream",
@@ -415,12 +415,12 @@
       ],
       "metadata": {
         "id": "cef99s21E8rf",
-        "outputId": "a5c5ee62-2cfe-481f-cc00-a3eb8c9a702e",
+        "outputId": "e7a58e2a-f19a-48b0-ba73-2fd59e0a85d7",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 117,
+      "execution_count": 152,
       "outputs": [
         {
           "output_type": "stream",
@@ -482,12 +482,12 @@
       ],
       "metadata": {
         "id": "am8M2ZF-HlEC",
-        "outputId": "7c469db7-356b-4100-f2ff-ec6fc7d9b928",
+        "outputId": "0b30a520-0eb0-4268-f335-d913d8a680a9",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 118,
+      "execution_count": 153,
       "outputs": [
         {
           "output_type": "stream",
@@ -540,12 +540,12 @@
       ],
       "metadata": {
         "id": "vHKkpYtgIF_w",
-        "outputId": "2cbdde92-a963-4287-9c1e-3b0fb9e274d5",
+        "outputId": "a0dc42ce-709a-47b1-c644-fdaec89ba900",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 119,
+      "execution_count": 154,
       "outputs": [
         {
           "output_type": "stream",
@@ -573,12 +573,12 @@
       ],
       "metadata": {
         "id": "nxVw-HsSrXEN",
-        "outputId": "d68ae5d7-bcc6-4547-abcd-d950f4b9448b",
+        "outputId": "25a2b209-5ed4-4b0f-d69a-737ca59822f8",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 120,
+      "execution_count": 155,
       "outputs": [
         {
           "output_type": "stream",
@@ -654,12 +654,12 @@
       ],
       "metadata": {
         "id": "MsazcHNhq1P9",
-        "outputId": "57831e7b-5d01-44e8-ffe8-a7a1782eaa6b",
+        "outputId": "93d03910-6f12-4202-c9de-cd9fb33b3e61",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 121,
+      "execution_count": 156,
       "outputs": [
         {
           "output_type": "stream",
@@ -688,12 +688,12 @@
       ],
       "metadata": {
         "id": "DPKvFW1_tCi6",
-        "outputId": "74cbd64f-c217-418b-a89a-8d5b0d19e21a",
+        "outputId": "465c4754-b2e6-4548-fc3b-da18420548ef",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 122,
+      "execution_count": 157,
       "outputs": [
         {
           "output_type": "stream",
@@ -803,9 +803,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "pNhF4XYi1I7s",
-        "outputId": "61c79fa1-6db2-4b57-ca20-6d8e95151e23"
+        "outputId": "5d29f455-9be1-4685-e24a-f47d8ad0e0c6"
       },
-      "execution_count": 123,
+      "execution_count": 158,
       "outputs": [
         {
           "output_type": "stream",
@@ -850,9 +850,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "JUvJTXSS13i8",
-        "outputId": "a946e3a8-8ae9-4537-b573-5792fd37beb8"
+        "outputId": "0e50de9b-7ef1-4396-c792-e09ccd31b904"
       },
-      "execution_count": 124,
+      "execution_count": 159,
       "outputs": [
         {
           "output_type": "stream",
@@ -900,9 +900,11 @@
         "\n",
         "# Find the minimum and maximum values\n",
         "min_upload_speed = upload_speed.min()\n",
+        "max_upload_speed = upload_speed.max()\n",
         "\n",
         "# Print the results\n",
         "print(\"Min:\", min_upload_speed)\n",
+        "print(\"Max:\", max_upload_speed)\n",
         "print(\"Mean:\", mean)\n",
         "print(\"Median:\", median)\n",
         "print(\"Range:\", range_val)\n",
@@ -911,23 +913,24 @@
       ],
       "metadata": {
         "id": "_onZJ1af-dRF",
-        "outputId": "396356f7-b53f-402d-b3b9-bb8bf436f033",
+        "outputId": "8b281921-3813-421f-ca28-e9d89c640129",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 135,
+      "execution_count": 161,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "Min: 0.01\n",
-            "Mean: 21.843857700650762\n",
-            "Median: 7.48\n",
+            "Max: 932.9\n",
+            "Mean: 21.611705177938944\n",
+            "Median: 7.37\n",
             "Range: 932.89\n",
-            "Standard Deviation: 53.06636448492144\n",
-            "Skewness: 7.373517725372531\n"
+            "Standard Deviation: 52.785077537631146\n",
+            "Skewness: 7.410393613016622\n"
           ]
         }
       ]
@@ -958,9 +961,11 @@
         "\n",
         "# Find the minimum and maximum values\n",
         "min_download_speed = download_speed.min()\n",
+        "max_download_speed = download_speed.max()\n",
         "\n",
         "# Print the results\n",
         "print(\"Min:\", min_download_speed)\n",
+        "print(\"Max:\", max_download_speed)\n",
         "print(\"Mean:\", mean)\n",
         "print(\"Median:\", median)\n",
         "print(\"Range:\", range_val)\n",
@@ -969,23 +974,24 @@
       ],
       "metadata": {
         "id": "8PGkkQV2_57m",
-        "outputId": "065d0af4-9f27-489a-860b-58aaed399b7d",
+        "outputId": "0a82eda1-5350-49fb-c6f9-fdf80f161f47",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 137,
+      "execution_count": 162,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "Min: 0.01\n",
-            "Mean: 96.2448442516269\n",
-            "Median: 54.91\n",
+            "Max: 941.74\n",
+            "Mean: 95.04424439197166\n",
+            "Median: 53.545\n",
             "Range: 941.73\n",
-            "Standard Deviation: 113.69678103264611\n",
-            "Skewness: 2.1418906730337874\n"
+            "Standard Deviation: 113.19664084838082\n",
+            "Skewness: 2.1693861760629525\n"
           ]
         }
       ]
@@ -998,15 +1004,6 @@
       "metadata": {
         "id": "0rEmemxqARXZ"
       }
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "NlVo3kcADL0J"
-      },
-      "execution_count": null,
-      "outputs": []
     },
     {
       "cell_type": "code",
@@ -1024,11 +1021,13 @@
         "std_dev = jitter.std()\n",
         "skewness = jitter.skew()\n",
         "\n",
-        "# Find the minimum value\n",
+        "# # Find the minimum and maximum values\n",
         "min_jitter = jitter.min()\n",
+        "max_jitter = jitter.max()\n",
         "\n",
         "# Print the results\n",
         "print(\"Min:\", min_jitter)\n",
+        "print(\"Max:\", max_jitter)\n",
         "print(\"Mean:\", mean)\n",
         "print(\"Median:\", median)\n",
         "print(\"Range:\", range_val)\n",
@@ -1037,23 +1036,24 @@
       ],
       "metadata": {
         "id": "CXq5n0IbC5ua",
-        "outputId": "e9d1ffcf-02ce-4b82-ce11-69bca4640fd5",
+        "outputId": "eb66318b-27ec-4787-9702-b20ecba3cbf6",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 139,
+      "execution_count": 163,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "Min: 0.01\n",
-            "Mean: 6.5266507592190885\n",
+            "Max: 4368.64\n",
+            "Mean: 7.071970821386405\n",
             "Median: 2.02\n",
-            "Range: 1594.5\n",
-            "Standard Deviation: 30.544718722775347\n",
-            "Skewness: 29.579556175835133\n"
+            "Range: 4368.63\n",
+            "Standard Deviation: 50.98203510406158\n",
+            "Skewness: 59.35629910273703\n"
           ]
         }
       ]
@@ -1082,11 +1082,13 @@
         "std_dev = latency.std()\n",
         "skewness = latency.skew()\n",
         "\n",
-        "# Find the minimum value\n",
+        "# # Find the minimum and maximum values\n",
         "min_latency = latency.min()\n",
+        "max_latency = latency.max()\n",
         "\n",
         "# Print the results\n",
         "print(\"Min:\", min_latency)\n",
+        "print(\"Max:\", max_latency)\n",
         "print(\"Mean:\", mean)\n",
         "print(\"Median:\", median)\n",
         "print(\"Range:\", range_val)\n",
@@ -1095,23 +1097,24 @@
       ],
       "metadata": {
         "id": "FplQbD2GA7i4",
-        "outputId": "84dacffc-ba45-4b45-b309-93cbe0bbbb70",
+        "outputId": "78cb55c7-0f6b-44a0-e402-c69f727e1e0b",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 141,
+      "execution_count": 164,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Min: 0.18\n",
-            "Mean: 420.680800867679\n",
-            "Median: 40.9\n",
-            "Range: 4294967.12\n",
-            "Standard Deviation: 40006.88115229682\n",
-            "Skewness: 107.3544362698866\n"
+            "Min: 0.1\n",
+            "Max: 4294967.3\n",
+            "Mean: 410.3985579355708\n",
+            "Median: 40.92\n",
+            "Range: 4294967.2\n",
+            "Standard Deviation: 39441.13730441986\n",
+            "Skewness: 108.89432015143929\n"
           ]
         }
       ]
@@ -1140,11 +1143,13 @@
         "std_dev = packet_loss.std()\n",
         "skewness = packet_loss.skew()\n",
         "\n",
-        "# Find the minimum value\n",
+        "# # Find the minimum and maximum values\n",
         "min_packet_loss = packet_loss.min()\n",
+        "max_packet_loss = packet_loss.max()\n",
         "\n",
         "# Print the results\n",
         "print(\"Min:\", min_packet_loss)\n",
+        "print(\"Max:\", max_packet_loss)\n",
         "print(\"Mean:\", mean)\n",
         "print(\"Median:\", median)\n",
         "print(\"Range:\", range_val)\n",
@@ -1153,23 +1158,24 @@
       ],
       "metadata": {
         "id": "IhvMFB8cBPpS",
-        "outputId": "2bb6f4e0-2ea1-4bee-df0f-bd0641e003cd",
+        "outputId": "0503f52b-993b-4555-f326-09dc275e3d98",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 142,
+      "execution_count": 165,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "Min: 0.0\n",
-            "Mean: 2.004599566160521\n",
+            "Max: 47.85\n",
+            "Mean: 2.0036667228875022\n",
             "Median: 0.05\n",
             "Range: 47.85\n",
-            "Standard Deviation: 4.385871362082768\n",
-            "Skewness: 3.5002320451735187\n"
+            "Standard Deviation: 4.389391448549163\n",
+            "Skewness: 3.4920742969507836\n"
           ]
         }
       ]
