--- a/NEC_data_cleaning.ipynb
+++ b/NEC_data_cleaning.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOHr5lWliOhV/Ur1ngSzSaF",
+      "authorship_tag": "ABX9TyMIFBX0PESd3pAWuz4Zn8Yv",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -39,7 +39,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 84,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -83,7 +83,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 85,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -122,7 +122,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 86,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -171,7 +171,7 @@
       "metadata": {
         "id": "yb7N0MYp-a8P"
       },
-      "execution_count": 87,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -201,7 +201,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 88,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -237,7 +237,7 @@
       "metadata": {
         "id": "Tv6iMA-h-dzN"
       },
-      "execution_count": 89,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -267,7 +267,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 90,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -304,7 +304,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 91,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -392,7 +392,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 92,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -429,7 +429,7 @@
         "id": "ez24zJwZgaaP",
         "outputId": "f075163d-bc06-4b34-8c60-12cc9c8bf180"
       },
-      "execution_count": 93,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -469,7 +469,7 @@
         "id": "RBy34o8zyrO9",
         "outputId": "3a007dab-bb6b-4f30-f474-862009efd043"
       },
-      "execution_count": 94,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -505,7 +505,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 95,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -572,7 +572,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 96,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -630,7 +630,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 97,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -663,7 +663,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 98,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -744,7 +744,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 99,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -778,7 +778,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 100,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -890,7 +890,7 @@
         "id": "pNhF4XYi1I7s",
         "outputId": "c572bc89-4a16-445e-80ff-7c8333978d70"
       },
-      "execution_count": 101,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -937,7 +937,7 @@
         "id": "JUvJTXSS13i8",
         "outputId": "488bca5c-dfdf-4d1b-bee6-2a0e0e72dfba"
       },
-      "execution_count": 102,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -977,7 +977,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 103,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1072,7 +1072,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 104,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1128,7 +1128,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 105,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1189,7 +1189,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 106,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1251,7 +1251,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 107,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1312,7 +1312,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 108,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1373,7 +1373,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 109,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1436,7 +1436,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 110,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1499,7 +1499,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 111,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1562,7 +1562,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 112,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1625,7 +1625,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 113,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1688,7 +1688,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 114,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1750,7 +1750,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 115,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2181,7 +2181,7 @@
           "height": 833
         }
       },
-      "execution_count": 116,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -28030,7 +28030,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 117,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -28121,7 +28121,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 118,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -28168,7 +28168,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 119,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -28260,6 +28260,96 @@
     {
       "cell_type": "markdown",
       "source": [
+        "Extracting the Postal Prefix into it's own column"
+      ],
+      "metadata": {
+        "id": "lgrpYCN_rITD"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Add a new column \"POSTAL PREFIX\" containing the first three characters of the postal code\n",
+        "df['POSTAL PREFIX'] = df['CLIENT POSTAL CODE'].str[:3]\n",
+        "\n",
+        "# Get the number and names of columns\n",
+        "column_count = len(df.columns)\n",
+        "column_names = df.columns.tolist()\n",
+        "\n",
+        "# Print the number and names of columns\n",
+        "print(\"Number of Columns:\", column_count)\n",
+        "print(\"Column Names:\", column_names)\n",
+        "\n",
+        "# Get the unique values in the \"POSTAL PREFIX\" column\n",
+        "unique_values = df['POSTAL PREFIX'].unique()\n",
+        "\n",
+        "# Print the unique values\n",
+        "print(\"Unique Values in 'POSTAL PREFIX' Column:\")\n",
+        "for value in unique_values:\n",
+        "    print(value)\n",
+        "\n",
+        "# Save the updated DataFrame \n",
+        "df.to_csv('https://raw.githubusercontent.com/ShanChartrand/NECDataCleaning/main/necoriginal.csv', index=False)"
+      ],
+      "metadata": {
+        "id": "HITK47HSrQf8",
+        "outputId": "a6bfb302-f467-43c9-cb8a-ddae76067430",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 128,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Number of Columns: 23\n",
+            "Column Names: ['TEST ID', 'TEST DATE / UTC HOUR', 'GEO LATITUDE', 'GEO LONGITUDE', 'DOWNLOAD SPEED', 'UPLOAD SPEED', 'JITTER', 'LATENCY', 'PACKET LOSS', 'MOBILE TEST', 'ISP', 'CLIENT IP', 'CLIENT CITY', 'CLIENT PROVINCE', 'CLIENT POSTAL CODE', 'AS NUMBER', 'IPV6 SUPPORTED', 'DNSSEC SUPPORTED', 'TEST SERVER', 'browser_test_url', 'HEATMAP_MUNICIPALITY', 'HEATMAP_CENSUS_TRACTS', 'POSTAL PREFIX']\n",
+            "Unique Values in 'POSTAL PREFIX' Column:\n",
+            "R2M\n",
+            "R3W\n",
+            "R3M\n",
+            "R2G\n",
+            "R3R\n",
+            "R2V\n",
+            "R2W\n",
+            "R2P\n",
+            "R2N\n",
+            "R3K\n",
+            "R2H\n",
+            "R3J\n",
+            "R3B\n",
+            "R3C\n",
+            "R3P\n",
+            "R2C\n",
+            "R2Y\n",
+            "R3Y\n",
+            "R3G\n",
+            "R3N\n",
+            "R3T\n",
+            "R3L\n",
+            "R2J\n",
+            "R3A\n",
+            "R3H\n",
+            "R2K\n",
+            "R2X\n",
+            "R2R\n",
+            "R2L\n",
+            "R0G\n",
+            "R3V\n",
+            "R3X\n",
+            "R3E\n",
+            "R5A\n",
+            "J0S\n",
+            "R0C\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
         "Normalizing the 5 key metrics: Upload Speed, Download Speed, Jitter, Latency, and Packet Loss"
       ],
       "metadata": {
@@ -28269,7 +28359,7 @@
     {
       "cell_type": "code",
       "source": [
-        "from sklearn.preprocessing import MinMaxScaler\n",
+        "\"\"\"from sklearn.preprocessing import MinMaxScaler\n",
         "\n",
         "# Select the columns to be normalized\n",
         "columns_to_normalize = ['UPLOAD SPEED', 'DOWNLOAD SPEED', 'JITTER', 'LATENCY', 'PACKET LOSS']\n",
@@ -28281,31 +28371,67 @@
         "df[columns_to_normalize] = scaler.fit_transform(df[columns_to_normalize])\n",
         "\n",
         "# Save the updated DataFrame \n",
-        "df.to_csv('https://raw.githubusercontent.com/ShanChartrand/NECDataCleaning/main/necoriginal.csv', index=False)\n"
+        "df.to_csv('https://raw.githubusercontent.com/ShanChartrand/NECDataCleaning/main/necoriginal.csv', index=False)#\n"
       ],
       "metadata": {
         "id": "KZIewWyibbiC"
       },
-      "execution_count": 120,
+      "execution_count": 130,
       "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "Adding an \"AREA\" column for Winnipeg, to break down each CIRA test based on area's of the city"
-      ],
-      "metadata": {
-        "id": "8ThO3vhya1w4"
-      }
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "import pandas as pd\n",
+        "import statsmodels.api as sm\n",
+        "from statsmodels.formula.api import ols\n",
+        "\n",
+        "# Subset the data for Winnipeg\n",
+        "winnipeg_data = df[df['CLIENT CITY'] == 'Winnipeg']\n",
+        "\n",
+        "# Perform ANOVA for each variable\n",
+        "variables = ['jitter', 'latency', 'packet loss', 'upload speed', 'download speed']\n",
+        "for variable in variables:\n",
+        "    formula = f\"{variable} ~ C(POSTAL PREFIX)\"\n",
+        "    model = ols(formula, data=winnipeg_data).fit()\n",
+        "    anova_table = sm.stats.anova_lm(model, typ=2)\n",
+        "    print(f\"Variable: {variable}\")\n",
+        "    print(anova_table)\n",
+        "    print()\n"
+      ],
       "metadata": {
-        "id": "lAocJz1jneAE"
+        "id": "-YvPSpOetLXW",
+        "outputId": "374038dc-c24d-40a8-a29d-3fb2b8dce9a8",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 842
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 129,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "SyntaxError",
+          "evalue": "ignored",
+          "traceback": [
+            "Traceback \u001b[0;36m(most recent call last)\u001b[0m:\n",
+            "  File \u001b[1;32m\"/usr/local/lib/python3.10/dist-packages/IPython/core/interactiveshell.py\"\u001b[0m, line \u001b[1;32m3553\u001b[0m, in \u001b[1;35mrun_code\u001b[0m\n    exec(code_obj, self.user_global_ns, self.user_ns)\n",
+            "  File \u001b[1;32m\"<ipython-input-129-d1d37b7b20a9>\"\u001b[0m, line \u001b[1;32m12\u001b[0m, in \u001b[1;35m<cell line: 10>\u001b[0m\n    model = ols(formula, data=winnipeg_data).fit()\n",
+            "  File \u001b[1;32m\"/usr/local/lib/python3.10/dist-packages/statsmodels/base/model.py\"\u001b[0m, line \u001b[1;32m200\u001b[0m, in \u001b[1;35mfrom_formula\u001b[0m\n    tmp = handle_formula_data(data, None, formula, depth=eval_env,\n",
+            "  File \u001b[1;32m\"/usr/local/lib/python3.10/dist-packages/statsmodels/formula/formulatools.py\"\u001b[0m, line \u001b[1;32m63\u001b[0m, in \u001b[1;35mhandle_formula_data\u001b[0m\n    result = dmatrices(formula, Y, depth, return_type='dataframe',\n",
+            "  File \u001b[1;32m\"/usr/local/lib/python3.10/dist-packages/patsy/highlevel.py\"\u001b[0m, line \u001b[1;32m309\u001b[0m, in \u001b[1;35mdmatrices\u001b[0m\n    (lhs, rhs) = _do_highlevel_design(formula_like, data, eval_env,\n",
+            "  File \u001b[1;32m\"/usr/local/lib/python3.10/dist-packages/patsy/highlevel.py\"\u001b[0m, line \u001b[1;32m164\u001b[0m, in \u001b[1;35m_do_highlevel_design\u001b[0m\n    design_infos = _try_incr_builders(formula_like, data_iter_maker, eval_env,\n",
+            "  File \u001b[1;32m\"/usr/local/lib/python3.10/dist-packages/patsy/highlevel.py\"\u001b[0m, line \u001b[1;32m66\u001b[0m, in \u001b[1;35m_try_incr_builders\u001b[0m\n    return design_matrix_builders([formula_like.lhs_termlist,\n",
+            "  File \u001b[1;32m\"/usr/local/lib/python3.10/dist-packages/patsy/build.py\"\u001b[0m, line \u001b[1;32m689\u001b[0m, in \u001b[1;35mdesign_matrix_builders\u001b[0m\n    factor_states = _factors_memorize(all_factors, data_iter_maker, eval_env)\n",
+            "  File \u001b[1;32m\"/usr/local/lib/python3.10/dist-packages/patsy/build.py\"\u001b[0m, line \u001b[1;32m354\u001b[0m, in \u001b[1;35m_factors_memorize\u001b[0m\n    which_pass = factor.memorize_passes_needed(state, eval_env)\n",
+            "  File \u001b[1;32m\"/usr/local/lib/python3.10/dist-packages/patsy/eval.py\"\u001b[0m, line \u001b[1;32m478\u001b[0m, in \u001b[1;35mmemorize_passes_needed\u001b[0m\n    subset_names = [name for name in ast_names(self.code)\n",
+            "  File \u001b[1;32m\"/usr/local/lib/python3.10/dist-packages/patsy/eval.py\"\u001b[0m, line \u001b[1;32m478\u001b[0m, in \u001b[1;35m<listcomp>\u001b[0m\n    subset_names = [name for name in ast_names(self.code)\n",
+            "  File \u001b[1;32m\"/usr/local/lib/python3.10/dist-packages/patsy/eval.py\"\u001b[0m, line \u001b[1;32m109\u001b[0m, in \u001b[1;35mast_names\u001b[0m\n    for node in ast.walk(ast.parse(code)):\n",
+            "\u001b[0;36m  File \u001b[0;32m\"/usr/lib/python3.10/ast.py\"\u001b[0;36m, line \u001b[0;32m50\u001b[0;36m, in \u001b[0;35mparse\u001b[0;36m\u001b[0m\n\u001b[0;31m    return compile(source, filename, mode, flags,\u001b[0m\n",
+            "\u001b[0;36m  File \u001b[0;32m\"<unknown>\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    C(POSTAL PREFIX)\u001b[0m\n\u001b[0m      ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax. Perhaps you forgot a comma?\n"
+          ]
+        }
+      ]
     }
   ]
 }
