--- a/NEC_data_cleaning.ipynb
+++ b/NEC_data_cleaning.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOtelDSfTY28BDvc6wH6Q1s",
+      "authorship_tag": "ABX9TyPTesElqbt/NfjlsVnRuW+w",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28396,6 +28396,27 @@
     {
       "cell_type": "code",
       "source": [
+        "# Get the unique postal prefixes in the filtered DataFrame\n",
+        "unique_prefixes = df_winnipeg['POSTAL PREFIX'].unique()\n",
+        "\n",
+        "# Count the number of unique postal prefixes\n",
+        "prefix_count = len(unique_prefixes)\n",
+        "\n",
+        "# Print the number and names of unique postal prefixes\n",
+        "print(\"Number of unique postal prefixes:\", prefix_count)\n",
+        "print(\"Unique postal prefixes:\")\n",
+        "for prefix in unique_prefixes:\n",
+        "    print(prefix)\n"
+      ],
+      "metadata": {
+        "id": "ZhjJfIHuyJ18"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "from scipy import stats\n",
         "\n",
         "# Subset the data for Winnipeg\n",
@@ -28447,6 +28468,133 @@
             "F-value: 26.480821437748606\n",
             "P-value: 9.502605723152312e-165\n",
             "\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "These results indicate that the POSTAL PREFIX can be a significant factor in explaining the variations observed in these metrics within the Winnipeg dataset.\n",
+        "\n",
+        "---\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "hDMS4cZ_vFU6"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Removing all the data except Winnipeg data"
+      ],
+      "metadata": {
+        "id": "UcxFN8hhx_bj"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Count the initial number of rows\n",
+        "initial_row_count = len(df)\n",
+        "print(\"Initial number of rows:\", initial_row_count)\n",
+        "\n",
+        "# Filter the DataFrame to retain only rows where client city is 'Winnipeg'\n",
+        "df_winnipeg = df[df['CLIENT CITY'].str.strip().str.lower() == 'winnipeg']\n",
+        "\n",
+        "# Count the number of rows after filtering\n",
+        "winnipeg_row_count = len(df_winnipeg)\n",
+        "print(\"Number of rows for Winnipeg:\", winnipeg_row_count)\n",
+        "\n",
+        "# Save the updated DataFrame \n",
+        "df.to_csv('https://raw.githubusercontent.com/ShanChartrand/NECDataCleaning/main/necoriginal.csv', index=False)\n"
+      ],
+      "metadata": {
+        "id": "wkpt2RNqxzY9",
+        "outputId": "a5891ea0-7440-4a5e-bd68-26b08689bd01",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 184,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Initial number of rows: 11852\n",
+            "Number of rows for Winnipeg: 11519\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Get the unique postal prefixes in the filtered DataFrame\n",
+        "unique_prefixes = df_winnipeg['POSTAL PREFIX'].unique()\n",
+        "\n",
+        "# Count the number of unique postal prefixes\n",
+        "prefix_count = len(unique_prefixes)\n",
+        "\n",
+        "# Print the number and names of unique postal prefixes\n",
+        "print(\"Number of unique postal prefixes:\", prefix_count)\n",
+        "print(\"Unique postal prefixes:\")\n",
+        "for prefix in unique_prefixes:\n",
+        "    print(prefix)\n"
+      ],
+      "metadata": {
+        "id": "AmAN0Xa-yFCi",
+        "outputId": "d6c4fde7-cb64-49b4-8fdd-afacac0eda3a",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 185,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Number of unique postal prefixes: 36\n",
+            "Unique postal prefixes:\n",
+            "R2M\n",
+            "R3W\n",
+            "R3M\n",
+            "R2G\n",
+            "R3R\n",
+            "R2V\n",
+            "R2W\n",
+            "R2P\n",
+            "R2N\n",
+            "R3K\n",
+            "R2H\n",
+            "R3J\n",
+            "R3B\n",
+            "R3C\n",
+            "R3P\n",
+            "R2C\n",
+            "R2Y\n",
+            "R3Y\n",
+            "R3G\n",
+            "R3N\n",
+            "R3T\n",
+            "R3L\n",
+            "R2J\n",
+            "R3A\n",
+            "R3H\n",
+            "R2K\n",
+            "R2X\n",
+            "R2R\n",
+            "R2L\n",
+            "R0G\n",
+            "R3X\n",
+            "R3E\n",
+            "R3V\n",
+            "R5A\n",
+            "J0S\n",
+            "R0C\n"
           ]
         }
       ]
